--- a/docs/privacy-policy.mdx
+++ b/docs/privacy-policy.mdx
@@ -34,7 +34,7 @@ Want to learn more about what we do with any information we collect? [Review th
 
 **TABLE OF CONTENTS**
 
-[1\. WHAT INFORMATION DO WE COLLECT?](#privacy-policy/infocollect)
+[1\. WHAT INFORMATION DO WE COLLECT?](privacy-policy/#infocollect)
 
 [2\. HOW DO WE PROCESS YOUR INFORMATION?](#infouse)
 
