--- a/docs/privacy-policy.mdx
+++ b/docs/privacy-policy.mdx
@@ -34,7 +34,7 @@ Want to learn more about what we do with any information we collect? [Review th
 
 **TABLE OF CONTENTS**
 
-[1\. WHAT INFORMATION DO WE COLLECT?](privacy-policy/#infocollect)
+[1\. WHAT INFORMATION DO WE COLLECT?](#infocollect)
 
 [2\. HOW DO WE PROCESS YOUR INFORMATION?](#infouse)
 
@@ -288,81 +288,27 @@ California law requires us to let you know how we respond to web browser DNT sig
 
 We have collected the following categories of personal information in the past twelve (12) months:
 
-**Category**
+|                |                                                                                                                                                                                                          |               |
+| -------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
+| **Category**   | **Examples**                                                                                                                                                                                             | **Collected** |
+| A. Identifiers | Contact details, such as real name, alias, postal address, telephone or mobile contact number, unique personal identifier, online identifier, Internet Protocol address, email address, and account name | NO            |
 
-**Examples**
+|                                                                               |                                                                                                 |     |
+| ----------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------- | --- |
+| B. Personal information as defined in the California Customer Records statute | Name, contact information, education, employment, employment history, and financial information | NO  |
 
-**Collected**
-
-A. Identifiers
-
-Contact details, such as real name, alias, postal address, telephone or mobile contact number, unique personal identifier, online identifier, Internet Protocol address, email address, and account name
-
-NO
-
-B. Personal information as defined in the California Customer Records statute
-
-Name, contact information, education, employment, employment history, and financial information
-
-NO
-
-C. Protected classification characteristics under state or federal law
-
-Gender, age, date of birth, race and ethnicity, national origin, marital status, and other demographic data
-
-NO
-
-D. Commercial information
-
-Transaction information, purchase history, financial details, and payment information
-
-NO
-
-E. Biometric information
-
-Fingerprints and voiceprints
-
-NO
-
-F. Internet or other similar network activity
-
-Browsing history, search history, online behavior, interest data, and interactions with our and other websites, applications, systems, and advertisements
-
-NO
-
-G. Geolocation data
-
-Device location
-
-NO
-
-H. Audio, electronic, sensory, or similar information
-
-Images and audio, video or call recordings created in connection with our business activities
-
-NO
-
-I. Professional or employment-related information
-
-Business contact details in order to provide you our Services at a business level or job title, work history, and professional qualifications if you apply for a job with us
-
-NO
-
-J. Education Information
-
-Student records and directory information
-
-NO
-
-K. Inferences drawn from collected personal information
-
-Inferences drawn from any of the collected personal information listed above to create a profile or summary about, for example, an individual’s preferences and characteristics
-
-NO
-
-L. Sensitive personal Information
-
-NO
+|                                                                        |                                                                                                                                                                                 |     |
+| ---------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
+| C. Protected classification characteristics under state or federal law | Gender, age, date of birth, race and ethnicity, national origin, marital status, and other demographic data                                                                     | NO  |
+| D. Commercial information                                              | Transaction information, purchase history, financial details, and payment information                                                                                           | NO  |
+| E. Biometric information                                               | Fingerprints and voiceprints                                                                                                                                                    | NO  |
+| F. Internet or other similar network activity                          | Browsing history, search history, online behavior, interest data, and interactions with our and other websites, applications, systems, and advertisements                       | NO  |
+| G. Geolocation data                                                    | Device location                                                                                                                                                                 | NO  |
+| H. Audio, electronic, sensory, or similar information                  | Images and audio, video or call recordings created in connection with our business activities                                                                                   | NO  |
+| I. Professional or employment-related information                      | Business contact details in order to provide you our Services at a business level or job title, work history, and professional qualifications if you apply for a job with us    | NO  |
+| J. Education Information                                               | Student records and directory information                                                                                                                                       | NO  |
+| K. Inferences drawn from collected personal information                | Inferences drawn from any of the collected personal information listed above to create a profile or summary about, for example, an individual’s preferences and characteristics | NO  |
+| L. Sensitive personal Information                                      |                                                                                                                                                                                 | NO  |
 
 We may also collect other personal information outside of these categories through instances where you interact with us in person, online, or by phone or mail in the context of:
 
