--- a/docs/_sidebar.mdx
+++ b/docs/_sidebar.mdx
@@ -1,2 +1,2 @@
-- [Privacy Policy](privacy-policy.md)
-- [Terms and Conditions](terms-and-conditions.md)
+- [Privacy Policy](privacy-policy)
+- [Terms and Conditions](terms-and-conditions)
