Add new documentation

--- a/docs/terms/uk.mdx
+++ b/docs/terms/uk.mdx
@@ -1,6 +1,6 @@
 # **Положення та умови**
 
-Ці умови застосовуються до додатка **Lexiko** (надалі – «Програма») для мобільних пристроїв, створеного **Романом Онищенком** (надалі – «Постачальник послуг») як сервіс, що підтримується рекламою. .
+Ці умови застосовуються до додатка **Lexiko** (надалі – «Програма») для мобільних пристроїв, створеного **Романом Онищенком** (надалі – «Постачальник послуг») як сервіс з показом рекламних оголошень.
 
 Завантажуючи або використовуючи Програму, ви автоматично погоджуєтеся з наведеними нижче умовами. Наполегливо рекомендуємо вам уважно прочитати та зрозуміти ці умови перед використанням Програми. Несанкціоноване копіювання, модифікація Програми, будь-якої її частини або наших торгових марок суворо заборонено. Будь-які спроби отримати вихідний код Програми, перекласти Програму іншими мовами або створити похідні версії заборонені. Усі торгові марки, авторські права, права на бази даних та інші права інтелектуальної власності, пов’язані з Програмою, залишаються власністю Постачальника послуг.
 
