Add new documentation

--- a/docs/policy/en.mdx
+++ b/docs/policy/en.mdx
@@ -80,7 +80,7 @@ Our use of information received from Google APIs will adhere to [Google API Ser
 
 **Information collected from other sources**
 
-**_In Short:_** *We may collect limited data from public databases, marketing partners, \_social media platforms,* and other outside sources.\_
+**_In Short:_** *We may collect limited data from public databases, marketing partners, \_social media platforms,* and other outside sources.\
 
 In order to enhance our ability to provide relevant marketing, offers, and services to you and update our records, we may obtain information about you from other sources, such as public databases, joint marketing partners, affiliate programs, data providers, social media platforms, and from other third parties. This information includes mailing addresses, job titles, email addresses, phone numbers, intent data (or user behavior data), Internet Protocol (IP) addresses, social media profiles, social media URLs, and custom profiles, for purposes of targeted advertising and event promotion.
 
@@ -321,18 +321,6 @@ Depending upon the state where you live, you may also have the following rights:
 - Right to limit use and disclosure of sensitive personal data (as permitted by applicable law, including California’s privacy law)
 
 - Right to opt out of the collection of sensitive data and personal data collected through the operation of a voice or facial recognition feature (as permitted by applicable law, including Florida’s privacy law)
-
-**How to Exercise Your Rights**
-
-To exercise these rights, you can contact us by submitting a [data subject access request](https://app.termly.io/notify/490a162d-e772-4e63-85e2-b6afdbe6a93e), by emailing us at roman.onishencko@yahoo.com, or by referring to the contact details at the bottom of this document.
-
-Under certain US state data protection laws, you can designate an authorized agent to make a request on your behalf. We may deny a request from an authorized agent that does not submit proof that they have been validly authorized to act on your behalf in accordance with applicable laws.
-
-**Request Verification**
-
-Upon receiving your request, we will need to verify your identity to determine you are the same person about whom we have the information in our system. We will only use personal information provided in your request to verify your identity or authority to make the request. However, if we cannot verify your identity from the information already maintained by us, we may request that you provide additional information for the purposes of verifying your identity and for security or fraud-prevention purposes.
-
-If you submit the request through an authorized agent, we may need to collect additional information to verify your identity before processing your request and the agent will need to provide a written and signed permission from you to submit such request on your behalf.
 
 **Appeals**
 
