--- a/docs/faq/uk.mdx
+++ b/docs/faq/uk.mdx
@@ -1,5 +1,5 @@
-- [Домашня сторінка F.A.Q.](home/uk)
-- [Сторінка Словника F.A.Q.](dictionary/uk)
-- [Сторінка Навчання F.A.Q.](learning/uk)
-- [Сторінка Тренування F.A.Q.](training/uk)
+- [Домашня сторінка F.A.Q.](/faq/home/uk)
+- [Сторінка Словника F.A.Q.](/faq/dictionary/uk)
+- [Сторінка Навчання F.A.Q.](/faq/learning/uk)
+- [Сторінка Тренування F.A.Q.](/faq/training/uk)
 - [Сторінка Статистики F.A.Q.](statistics/uk)
