--- a/docs/faq/en.mdx
+++ b/docs/faq/en.mdx
@@ -1,5 +1,5 @@
-- [Home page F.A.Q.](home/en)
-- [Dictionary page F.A.Q.](dictionary/en)
-- [Learning page F.A.Q.](learning/en)
-- [Training page F.A.Q.](training/en)
-- [Statistics page F.A.Q.](statistics/en)
+- [Home page F.A.Q.](/faq/home/en)
+- [Dictionary page F.A.Q.](/faq/dictionary/en)
+- [Learning page F.A.Q.](l/faq/earning/en)
+- [Training page F.A.Q.](/faq/training/en)
+- [Statistics page F.A.Q.](/faq/statistics/en)
