--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -4,6 +4,8 @@ The "Premium" subscription is designed to remove any restrictions on the way to 
 
 With "Premium" you can:
 
+![Description](/assets/ad_free.png)
+
 ![Description](/assets/match_pairs_training.gif)
 
 - Use the app without annoying ads
