--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -4,7 +4,9 @@ The "Premium" subscription is designed to remove any restrictions on the way to 
 
 With "Premium" you can:
 
-![Description](/assets/ad_free.png)
+![Description](./assets/ad_free.png)
+![Description](assets/ad_free.png)
+![Description](/premium/assets/ad_free.png)
 
 ![Description](/assets/match_pairs_training.gif)
 
