--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -4,13 +4,8 @@ The "Premium" subscription is designed to remove any restrictions on the way to 
 
 With "Premium" you can:
 
-![Description](./assets/ad_free.png)
-![Description](assets/ad_free.png)
-![Description](/premium/assets/ad_free.png)
-
-![Description](/assets/match_pairs_training.gif)
-
 - Use the app without annoying ads
+  (/premium/assets/ad_free.png)
 
 - Add any number of words and phrases to the Dictionary
 
@@ -25,6 +20,8 @@ With "Premium" you can:
 - New types of Training are available for you, namely: "Match Pairs" and "Flip Cards"
 
 - _Match pairs_
+
+(/premium/assets/match_pairs_training.gif)
 
 - _Flip cards_
 
