--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -5,15 +5,19 @@ The "Premium" subscription is designed to remove any restrictions on the way to 
 With "Premium" you can:
 
 - Use the app without annoying ads
-  (/premium/assets/ad_free.png)
+  ![Description](/premium/assets/ad_free.png)
 
 - Add any number of words and phrases to the Dictionary
+  ![Description](/premium/assets/no_limits.png)
 
 - Add multiple language pairs and switch between them at any time
+  ![Description](/premium/multiple_lang_pairs_eng.png)
 
 - Translate not only words, but also phrases or short sentences of up to 5 words
+  ![Description](/premium/assets/no_limits.png)
 
 - Add your translation for a word or phrase
+  ![Description](/premium/assets/custom_translate_eng.png)
 
 - A new type of Learning is available for you, namely: 'Drag and Drop'
 
@@ -21,7 +25,7 @@ With "Premium" you can:
 
 - _Match pairs_
 
-(/premium/assets/match_pairs_training.gif)
+![Description](/premium/assets/match_pairs_training.gif)
 
 - _Flip cards_
 
