--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -1,34 +1,34 @@
-**WHAT IS PREMIUM?**
+##**WHAT IS PREMIUM?**
 
 The "Premium" subscription is designed to remove any restrictions on the way to learning a new language. If you have a desire to support the developer and/or want to use additional features of the application, please read the benefits of the "Premium" subscription.
 
-With "Premium" you can:
+## **With "Premium" you can: **
 
-- Use the app without annoying ads
+- **Use the app without annoying ads**
   ![Description](/premium/assets/ad_free.png)
 
-- Add any number of words and phrases to the Dictionary
+- **Add any number of words and phrases to the Dictionary**
   ![Description](/premium/assets/no_limits.png)
 
-- Add multiple language pairs and switch between them at any time
+- **Add multiple language pairs and switch between them at any time**
   ![Description](/premium/assets/multiple_lang_pairs_eng.png)
 
-- Translate not only words, but also phrases or short sentences of up to 5 words
+- **Translate not only words, but also phrases or short sentences of up to 5 words**
   ![Description](/premium/assets/translate_phrases_eng.png)
 
-- Add your translation for a word or phrase
+- **Add your translation for a word or phrase**
   ![Description](/premium/assets/custom_translate_eng.png)
 
-- A new type of Learning is available for you, namely: 'Drag and Drop'
+- **A new type of Learning is available for you, namely: 'Drag and Drop'**
   ![Description](/premium/assets/match_pairs_learning.gif)
 
-- New types of Training are available for you, namely: "Match Pairs" and "Flip Cards"
+- **New types of Training are available for you, namely: "Match Pairs" and "Flip Cards"**
 
-- _Match pairs_
+- **_Match pairs_**
   ![Description](/premium/assets/match_pairs_training.gif)
 
-- _Flip cards_
+- **_Flip cards_**
   ![Description](/premium/assets/flip_cards_training.gif)
 
-- Highlight and send a word or phrase from other applications on your device for translation
+- **Highlight and send a word or phrase from other applications on your device for translation**
   ![Description](/premium/assets/send_other_apps.gif)
