Add premium data

--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -1,8 +1,8 @@
-##**WHAT IS PREMIUM?**
+# **WHAT IS PREMIUM?**
 
 The "Premium" subscription is designed to remove any restrictions on the way to learning a new language. If you have a desire to support the developer and/or want to use additional features of the application, please read the benefits of the "Premium" subscription.
 
-## **With "Premium" you can: **
+## **With "Premium" you can:**
 
 - **Use the app without annoying ads**
   ![Description](/premium/assets/ad_free.png)
