--- a/docs/premium/uk.mdx
+++ b/docs/premium/uk.mdx
@@ -1,8 +1,8 @@
-##**ЩО ТАКЕ ПРЕМІУМ?**
+# **ЩО ТАКЕ ПРЕМІУМ?**
 
 Підписка "Преміум" покликана зняти будь-які обмеження на шляху до вивчення нової мови. Якщо Ви маєте бажання підтримати розробника та/або хочете скористатись всіма можливостями додатка, будь-ласка, ознайомтеся з перевагами "Преміум" підписки.
 
-##**З "Преміум" Ви можете:**
+## **З "Преміум" Ви можете:**
 
 - **Користуватись додатком без надокучливої реклами**
   ![Description](/premium/assets/ad_free.png)
