--- a/docs/faq/en.mdx
+++ b/docs/faq/en.mdx
@@ -1,5 +1,6 @@
-- [Home page F.A.Q.](/faq/home/en)
-- [Dictionary page F.A.Q.](/faq/dictionary/en)
-- [Learning page F.A.Q.](l/faq/earning/en)
-- [Training page F.A.Q.](/faq/training/en)
-- [Statistics page F.A.Q.](/faq/statistics/en)
+- [General application flow](/flow/general/en)
+- [Home page](/flow/home/en)
+- [Dictionary page](/flow/dictionary/en)
+- [Learning page](l/flow/earning/en)
+- [Training page](/flow/training/en)
+- [Statistics page](/flow/statistics/en)
