--- a/docs/faq/uk.mdx
+++ b/docs/faq/uk.mdx
@@ -1,5 +1,6 @@
-- [Домашня сторінка F.A.Q.](/faq/home/uk)
-- [Сторінка Словника F.A.Q.](/faq/dictionary/uk)
-- [Сторінка Навчання F.A.Q.](/faq/learning/uk)
-- [Сторінка Тренування F.A.Q.](/faq/training/uk)
-- [Сторінка Статистики F.A.Q.](statistics/uk)
+- [Загальний процес](/flow/general/uk)
+- [Домашня сторінка](/flow/home/uk)
+- [Сторінка Словника](/flow/dictionary/uk)
+- [Сторінка Навчання](/flow/learning/uk)
+- [Сторінка Тренування](/flow/training/uk)
+- [Сторінка Статистики](/flow/statistics/uk)
