general app flow

--- a/docs/flow/general/uk.mdx
+++ b/docs/flow/general/uk.mdx
@@ -1,1 +1,77 @@
 # **F.A.Q.**
+
+Загальний процес роботи додатка наступний:
+
+1. Оберіть вашу рідну мову та мову, яку бажаєте вивчати
+   ![Description](/flow/general/assets/add_lang_pair_uk.jpg)
+
+2. Ви додаєте нове слово (для звичайного користувача) або фразу (для Преміум користувача) до вашого Словника.
+   ![Description](/flow/general/assets/dictionary_uk.jpg)
+
+Додавати слова/фрази до словника можна 3 способами:
+
+1. Натиснувши іконку та ввівши слово/фразу для отримання перекладу
+   ![Description](/flow/general/assets/word_translate_uk.jpg)
+   ![Description](/flow/general/assets/phrase_translate_uk.jpg)
+
+2. Завантаживши excel документ зі списком слів/фраз
+   ![Description](/flow/general/assets/import_excel_uk.jpg)
+
+3. Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
+   ![Description](/flow/general/assets/send_from_app.jpg)
+
+---
+
+3. Маючи необхідний мінімум слів або слів/фраз у словнику, ви можете почати з їх вивчення на сторінці Навчання. Тут вам доступні два види навчання:
+
+1) Випадаючий список
+   ![Description](/flow/general/assets/learning_dropdown_uk.jpg)
+
+2) Перетягти і відпустити
+   ![Description](/flow/general/assets/learning_drag_drop_uk.jpg)
+
+---
+
+4. Після успішного Навчання, якщо почуваєте себе впевнено, можете перевірити свої знання на сторінці Тренування. Тут вам доступні два види навчання (з таймером або без):
+
+1) Обрати з
+   ![Description](/flow/general/assets/training_choose_from_uk.jpg)
+
+2) Обрати пару
+   ![Description](/flow/general/assets/training_choose_pair_uk.jpg)
+
+3) Правда чи хибність
+   ![Description](/flow/general/assets/training_true_false_uk.jpg)
+
+4) Сумістити пари
+   ![Description](/flow/general/assets/training_match_pairs_uk.jpg)
+
+5) Перегортання карток
+   ![Description](/flow/general/assets/training_flip_cards_uk.jpg)
+
+---
+
+5. Після проходження Тренування ви можете бачити результати на сторінці Статистики, де для кожного Тренування є можливість передивитись правильні та хибні відповіді, дату, напрямок перекладу та ін.
+   ![Description](/flow/general/assets/statistics_uk.jpg)
+   ![Description](/flow/general/assets/training_summary_uk.jpg)
+
+---
+
+6. На домашній сторінці Вам доступні наступні секції:
+
+1) Слово Дня - обирається із вашого словника випадковим чином, є можливість озвучити слово/фразу та їх переклад
+   ![Description](/flow/general/assets/word_of_day_uk.jpg)
+
+2) Найближча календарна подія - тут ви можете запланувати Навчання або Тренування на сьогодні, або на майбутню дату з можливістю отримати нагадування про цю подію
+   ![Description](/flow/general/assets/calendar_event_uk.jpg)
+
+3) Нещодавні досягнення - в цій секції відображатимуться досягнення у вигляді значків за певну кількість пройдених Навчань чи Тренувань, а також за кількість вивчених слів/фраз
+   ![Description](/flow/general/assets/achievements_uk.jpg)
+
+4) Остання статистика тренувань - тут вам доступний швидкий перегляд результатів попереднього Тренування
+   ![Description](/flow/general/assets/latest_stats_uk.jpg)
+
+---
+
+7. Ви можете контролювати відображення певних секцій Домашньої сторінки на сторінці Налаштувань акаунта. Також тут вам доступний ряд інших налаштувань додатка та можливість додавати або видаляти мовні пари (для Преміум користувачів)
+   ![Description](/flow/general/assets/account_uk.jpg)
