general app flow

--- a/docs/flow/general/en.mdx
+++ b/docs/flow/general/en.mdx
@@ -25,7 +25,7 @@
    - Drag and drop
      ![Description](/flow/general/assets/learning_drag_drop_en.jpg)
 
-4. **Training Sessions**
+4. **Training**
 
    After a successful training session, if you feel confident, you can check your knowledge on the Training page. Several types of training are available:
 
