general app flow

--- a/docs/flow/general/en.mdx
+++ b/docs/flow/general/en.mdx
@@ -6,7 +6,7 @@
 2. **Adding Words and Phrases to Your Dictionary**
    ![Description](/flow/general/assets/dictionary_en.jpg)
 
-   You can add words/phrases to the dictionary in 3 ways:
+   **You can add words/phrases to the dictionary in 3 ways:**
 
    - By clicking on the icon and entering the word/phrase to get the translation
      ![Description](/flow/general/assets/word_translate_en.jpg)
