--- a/docs/flow/general/uk.mdx
+++ b/docs/flow/general/uk.mdx
@@ -1,4 +1,4 @@
-###Загальний процес роботи додатка наступний:
+### Загальний процес роботи додатка наступний:
 
 1. **Оберіть вашу рідну мову та мову, яку бажаєте вивчати**
    ![Description](/flow/general/assets/add_lang_pair_uk.jpg)
@@ -6,7 +6,7 @@
 2. **Ви додаєте нове слово (для звичайного користувача) або фразу (для Преміум користувача) до вашого Словника**
    ![Description](/flow/general/assets/dictionary_uk.jpg)
 
-Додавати слова/фрази до словника можна 3 способами:
+**Додавати слова/фрази до словника можна 3 способами:**
 
 - Натиснувши іконку та ввівши слово/фразу для отримання перекладу
   ![Description](/flow/general/assets/word_translate_uk.jpg)
