general app flow

--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -1,6 +1,83 @@
-- [Загальний процес](/flow/general/uk)
-- [Домашня сторінка](/flow/home/uk)
-- [Сторінка Словника](/flow/dictionary/uk)
-- [Сторінка Навчання](/flow/learning/uk)
-- [Сторінка Тренування](/flow/training/uk)
-- [Сторінка Статистики](/flow/statistics/uk)
+### Загальний процес роботи додатка наступний:
+
+1. **Оберіть вашу рідну мову та мову, яку бажаєте вивчати**
+   ![Description](/flow/assets/add_lang_pair_uk.jpg)
+
+2. **Ви додаєте нове слово (для звичайного користувача) або фразу (для Преміум користувача) до вашого Словника**
+   ![Description](/flow/assets/dictionary_uk.jpg)
+
+**Додавати слова/фрази до словника можна 3 способами:**
+
+- Натиснувши іконку та ввівши слово/фразу для отримання перекладу
+  ![Description](/flow/assets/word_translate_uk.jpg)
+  ![Description](/flow/assets/phrase_translate_uk.jpg)
+
+- Завантаживши excel документ зі списком слів/фраз
+  ![Description](/flow/assets/import_excel_uk.jpg)
+
+- Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
+  ![Description](/flow/assets/send_from_app.jpg)
+
+3. **Вивчення слів та фраз.**
+
+   Маючи необхідний мінімум слів або слів/фраз у словнику, ви можете почати з їх вивчення на сторінці Навчання. За замовчуванням переклади доданих слів/фраз є невидимими та закриті сірим кольором. Для вивченя слів/фраз Ви можете торканням пальця відкривати переклади один за одним або зробити їх видимими всі й одразу, торкнувшись відповідної іконки:
+   ![Description](/flow/assets/learning_unblur_uk.gif)
+
+   Для закріплення матеріалу ви можете перейти в режим Навчання та сумістити слово/фразу та її переклад.
+
+   Вам доступні два види навчання:
+
+- Випадаючий список: оберіть в налаштуваннях кількість опцій випадаючого списку та спробуйте обрати правильну відповідь для кожного слова чи фрази.
+  ![Description](/flow/assets/learning_dropdown_uk.jpg)
+
+- Перетягти і відпустити: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
+
+  ![Description](/flow/assets/match_pairs_learning.gif)
+
+4. **Тренування**
+
+Після успішного Навчання, якщо почуваєте себе впевнено, можете перевірити свої знання на сторінці Тренування. Тут вам доступні два види навчання (з таймером або без):\*\*
+
+- Обрати з: вкажіть правильний переклад, обираючи з 4 варіантів. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
+  ![Description](/flow/assets/training_choose_from_uk.jpg)
+
+- Обрати пару: перетягніть слово/фразу та його переклад на верх, обираючи з 4 варіантів з кожного стовбчика. Стовбчики завжди містять лише одну пару слово/фраза та переклад. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
+  ![Description](/flow/assets/training_choose_pair_uk.jpg)
+
+- Правда чи хибність: просто оберіть з двох варіантів, чи правильний переклад запропоновано для слова/фрази.
+  ![Description](/flow/assets/training_true_false_uk.jpg)
+
+- Сумістити пари: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
+  ![Description](/flow/assets/match_pairs_training.gif)
+
+- Перегортання карток: для кожного слова/фрази введіть переклад та натисніть кнопку перевірки. Будьте уважні: під час відповіді враховуйте, що регістр має значення.
+  ![Description](/flow/assets/training_flip_cards_uk.jpg)
+
+  **Важливо зазначити, що у випадку невірної відповіді слово чи фраза з більшою вірогідністю потрапить в наступне Навчання та Тренування, таким чином Ви маєте можливість краще його запам'ятати.**
+
+5. **Перегляд статистики**
+
+Після проходження Тренування ви можете бачити результати на сторінці Статистики, де для кожного Тренування є можливість передивитись правильні та хибні відповіді, дату, напрямок перекладу та ін.
+![Description](/flow/assets/statistics_uk.jpg)
+![Description](/flow/assets/training_summary_uk.jpg)
+
+6. **Секції Домашньої сторінки**
+
+На домашній сторінці Вам доступні наступні секції:
+
+- Слово Дня - обирається із вашого словника випадковим чином, є можливість озвучити слово/фразу та їх переклад
+  ![Description](/flow/assets/word_of_day_uk.jpg)
+
+- Найближча календарна подія - тут ви можете запланувати Навчання або Тренування на сьогодні, або на майбутню дату з можливістю отримати нагадування про цю подію
+  ![Description](/flow/assets/calendar_event_uk.jpg)
+
+- Нещодавні досягнення - в цій секції відображатимуться досягнення у вигляді значків за певну кількість пройдених Навчань чи Тренувань, а також за кількість вивчених слів/фраз
+  ![Description](/flow/assets/achievements_uk.jpg)
+
+- Остання статистика тренувань - тут вам доступний швидкий перегляд результатів попереднього Тренування
+  ![Description](/flow/assets/latest_stats_uk.jpg)
+
+7. **Налаштування акаунта**
+
+Ви можете контролювати відображення певних секцій Домашньої сторінки на сторінці Налаштувань акаунта. Також тут вам доступний ряд інших налаштувань додатка та можливість додавати або видаляти мовні пари (для Преміум користувачів)
+![Description](/flow/assets/account_uk.jpg)
