--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -63,7 +63,7 @@
 
 6. **Секції Домашньої сторінки**
 
-На домашній сторінці Вам доступні наступні секції:
+На домашній сторінці вам доступні наступні секції:
 
 - Слово Дня - обирається із вашого словника випадковим чином, є можливість озвучити слово/фразу та їх переклад
   ![Description](/flow/assets/word_of_day_uk.jpg)
