--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -18,6 +18,20 @@
 - By sharing a word or phrase from another app on your device and getting the translation
   ![Description](/flow/assets/send_from_app.jpg)
 
+  To make it easier to choose the most correct translation, an indicator is available under the word, if it is completely filled in, then the translation is the most accurate:
+  ![Description](/flow/assets/translate_quality_en.jpg)
+
+  When translating phrases or adding your own translation, these translations are marked with the word "Premium":
+  ![Description](/flow/assets/custom_translate_en.jpg)
+
+**You can also delete a word/phrase in two ways:**
+
+- finger gesture to the left:
+  ![Description](/flow/assets/remove_swipe_en.jpg)
+
+- or by clicking on the basket icon. In this case, you will need to confirm the intention to delete:
+  ![Description](/flow/assets/trash_can.jpg)
+
 3. **Learning words and phrases**
 
    Once you have added enough words or phrases to your dictionary, you can start learning them on the Learning page. By default, translations of the added words or phrases are hidden and grayed out. To reveal the translations, you can either tap each one individually or show them all at once by tapping the corresponding icon:
