--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -18,6 +18,20 @@
 - Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
   ![Description](/flow/assets/send_from_app.jpg)
 
+Для полегшення вибору найбільш корректного перекладу вам доступний індикатор під словом, якщо він повністю заповнений, то переклад найбільш точний:
+![Description](/flow/assets/translate_quality_uk.jpg)
+
+При переклді фраз або додаванні власного перекладу ці переклади помічені словом "Преміум":
+![Description](/flow/assets/custom_translate_uk.jpg)
+
+**Також ви можете видалити слово/фразу двома способами:**
+
+- жестом пальця вліво:
+  ![Description](/flow/assets/remove_swipe_uk.jpg)
+
+- або натиснувши на іконку корзини. В цьому випадку вам потрібно буде підтвердити намір видалення:
+  ![Description](/flow/assets/trash_can.jpg)
+
 3. **Вивчення слів та фраз.**
 
    Маючи необхідний мінімум слів/фраз у словнику, ви можете почати з їх вивчення на сторінці Навчання. За замовчуванням переклади доданих слів/фраз є невидимими та закриті сірим кольором. Для вивченя ви можете торканням пальця відкривати переклади один за одним або зробити їх видимими всі й одразу, торкнувшись відповідної іконки:
