--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -21,7 +21,7 @@
 Для полегшення вибору найбільш корректного перекладу вам доступний індикатор під словом, якщо він повністю заповнений, то переклад найбільш точний:
 ![Description](/flow/assets/translate_quality_uk.jpg)
 
-При переклді фраз або додаванні власного перекладу ці переклади помічені словом "Преміум":
+При перекладі фраз або додаванні власного перекладу ці переклади помічені словом "Преміум":
 ![Description](/flow/assets/custom_translate_uk.jpg)
 
 **Також ви можете видалити слово/фразу двома способами:**
