--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -27,7 +27,7 @@
 **You can also delete a word/phrase in two ways:**
 
 - finger gesture to the left:
-  ![Description](/flow/assets/remove_swipe_en.jpg)
+  ![Description](/flow/assets/remove_swipe_en.gif)
 
 - or by clicking on the basket icon. In this case, you will need to confirm the intention to delete:
   ![Description](/flow/assets/trash_can.jpg)
