--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -27,7 +27,7 @@
 **Також ви можете видалити слово/фразу двома способами:**
 
 - жестом пальця вліво:
-  ![Description](/flow/assets/remove_swipe_uk.jpg)
+  ![Description](/flow/assets/remove_swipe_uk.gif)
 
 - або натиснувши на іконку корзини. В цьому випадку вам потрібно буде підтвердити намір видалення:
   ![Description](/flow/assets/trash_can.jpg)
