--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -22,7 +22,7 @@
 ![Description](/flow/assets/translate_quality_uk.jpg)
 
 При перекладі фраз або додаванні власного перекладу ці переклади помічені словом "Преміум":
-![Description](/flow/assets/custom_translate_uk.jpg)
+![Description](/flow/assets/custom_translate_uk.webp)
 
 **Також ви можете видалити слово/фразу двома способами:**
 
