--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -1,3 +1,23 @@
+# Table of Contents
+
+1. [Select your native language and the language you wish to learn](#select-your-native-language-and-the-language-you-wish-to-learn)
+2. [Add a new word or phrase to your Dictionary](#add-a-new-word-or-phrase-to-your-dictionary)
+   - [Ways to add words/phrases](#ways-to-add-wordsphrases-to-the-dictionary)
+   - [Delete a word or phrase](#delete-a-word-or-phrase)
+3. [Learning words and phrases](#learning-words-and-phrases)
+   - [Types of learning](#types-of-learning)
+4. [Training](#training)
+   - [Types of training](#types-of-training)
+5. [View statistics](#view-statistics)
+6. [Home Page Sections](#home-page-sections)
+   - [Word of the Day](#word-of-the-day)
+   - [Upcoming calendar event](#upcoming-calendar-event)
+   - [Recent achievements](#recent-achievements)
+   - [Latest training statistics](#latest-training-statistics)
+7. [Account Settings](#account-settings)
+
+---
+
 ### The general application process is as follows:
 
 1. **Select your native language and the language you wish to learn**
@@ -19,7 +39,7 @@
   ![Description](/flow/assets/send_from_app.jpg)
 
   To make it easier to choose the most correct translation, an indicator is available under the word, if it is completely filled in, then the translation is the most accurate:
-  ![Description](/flow/assets/translate_quality_en.jpg)
+  ![Description](/flow/assets/translate_quality_en.webp)
 
   When translating phrases or adding your own translation, these translations are marked with the word "Premium":
   ![Description](/flow/assets/custom_translate_en.jpg)
