--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -14,7 +14,7 @@
    - [Upcoming calendar event](#upcoming-calendar-event)
    - [Recent achievements](#recent-achievements)
    - [Latest training statistics](#latest-training-statistics)
-7. [Account Settings](/flow/en/#account-settings)
+7. [Account Settings](/flow/en#account-settings)
 
 ---
 
