--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -1,34 +1,12 @@
-# Table of Contents
+### The general application process is as follows:
 
-1. [Select your native language and the language you wish to learn](#select-your-native-language-and-the-language-you-wish-to-learn)
-2. [Add a new word or phrase to your Dictionary](#add-a-new-word-or-phrase-to-your-dictionary)
-   - [Ways to add words/phrases](#ways-to-add-wordsphrases-to-the-dictionary)
-   - [Delete a word or phrase](#delete-a-word-or-phrase)
-3. [Learning words and phrases](#learning-words-and-phrases)
-   - [Types of learning](#types-of-learning)
-4. [Training](#training)
-   - [Types of training](#types-of-training)
-5. [View statistics](#view-statistics)
-6. [Home Page Sections](#home-page-sections)
-   - [Word of the Day](#word-of-the-day)
-   - [Upcoming calendar event](#upcoming-calendar-event)
-   - [Recent achievements](#recent-achievements)
-   - [Latest training statistics](#latest-training-statistics)
-7. [Account Settings](/flow/en#account-settings)
+1. **Select your native language and the language you wish to learn**
+   ![Description](/flow/assets/add_lang_pair_en.jpg)
 
----
+2. **Add a new word (for regular users) or phrase (for Premium users) to your Dictionary**
+   ![Description](/flow/assets/dictionary_en.jpg)
 
-## 1. Select your native language and the language you wish to learn
-
-![Description](/flow/assets/add_lang_pair_en.jpg)
-
-## 2. Add a new word or phrase to your Dictionary
-
-![Description](/flow/assets/dictionary_en.jpg)
-
-### Ways to add words/phrases to the dictionary
-
-You can add words/phrases to the dictionary in three ways:
+**You can add words/phrases to the dictionary in three ways:**
 
 - By tapping the icon and entering the word or phrase to get the translation
   ![Description](/flow/assets/word_translate_en.jpg)
@@ -37,86 +15,82 @@ You can add words/phrases to the dictionary in three ways:
 - By uploading an Excel file with a list of words or phrases
   ![Description](/flow/assets/import_excel_en.jpg)
 
+  Before uploading the excel document, make sure that the names of the columns look like this:
+  ![Description](/flow/assets/excel_format.jpg)
+
 - By sharing a word or phrase from another app on your device and getting the translation
   ![Description](/flow/assets/send_from_app.jpg)
 
-### Delete a word or phrase
+  To make it easier to choose the most correct translation, an indicator is available under the word, if it is completely filled in, then the translation is the most accurate:
+  ![Description](/flow/assets/translate_quality_en.webp)
 
-You can also delete a word/phrase in two ways:
+  When translating phrases or adding your own translation, these translations are marked with the word "Premium":
+  ![Description](/flow/assets/custom_translate_en.jpg)
 
-- Finger gesture to the left:
+**You can also delete a word/phrase in two ways:**
+
+- finger gesture to the left:
   ![Description](/flow/assets/remove_swipe_en.gif)
 
-- By clicking on the basket icon and confirming the deletion:
+- or by clicking on the basket icon. In this case, you will need to confirm the intention to delete:
   ![Description](/flow/assets/trash_can.jpg)
 
-## 3. Learning words and phrases
+3. **Learning words and phrases**
 
-Once you have added enough words or phrases to your dictionary, you can start learning them on the Learning page. By default, translations of the added words or phrases are hidden and grayed out. To reveal the translations, you can either tap each one individually or show them all at once by tapping the corresponding icon:
-![Description](/flow/assets/learning_unblur_en.gif)
+   Once you have added enough words or phrases to your dictionary, you can start learning them on the Learning page. By default, translations of the added words or phrases are hidden and grayed out. To reveal the translations, you can either tap each one individually or show them all at once by tapping the corresponding icon:
+   ![Description](/flow/assets/learning_unblur_en.gif)
 
-### Types of learning
+   To reinforce your learning, you can switch to Learning mode and match words or phrases with their translations.
 
-Two types of learning are available:
+   Two types of learning are available:
 
-- **Drop-down list**: Choose the number of drop-down options in the settings and try to select the correct answer for each word or phrase.
-  ![Description](/flow/assets/learning_dropdown_en.jpg)
+   - **Drop-down list**: Choose the number of drop-down options in the settings and try to select the correct answer for each word or phrase.
+     ![Description](/flow/assets/learning_dropdown_en.jpg)
 
-- **Drag and drop**: Tap and hold the drag icon, then move the selected translation to match the word or phrase.
-  ![Description](/flow/assets/match_pairs_learning.gif)
+   - **Drag and drop**: Tap and hold the drag icon, then move the selected translation to match the word or phrase. Once released, the translation will be paired with the word or phrase, and any previous pairings will be swapped.
+     ![Description](/flow/assets/match_pairs_learning.gif)
 
-## 4. Training
+4. **Training**
+   After a successful learning session, if you're feeling confident, you can test your knowledge on the Training page. There are two types of training available (with or without a timer):
 
-After a successful learning session, you can test your knowledge on the Training page.
+   - **Choose from options**: Select the correct translation from four options. For this training type, you have up to three attempts to get the correct answer.
+     ![Description](/flow/assets/training_choose_from_en.jpg)
 
-### Types of training
+   - **Match pairs**: Drag and match the word or phrase with its correct translation by selecting from four options in each column. You have up to three attempts to complete the correct pairings.
+     ![Description](/flow/assets/training_choose_pair_en.jpg)
 
-- **Choose from options**: Select the correct translation from four options.
-  ![Description](/flow/assets/training_choose_from_en.jpg)
+   - **True or false**: Simply decide if the translation presented is correct for the word or phrase.
+     ![Description](/flow/assets/training_true_false_en.jpg)
 
-- **Match pairs**: Drag and match the word or phrase with its correct translation.
-  ![Description](/flow/assets/training_choose_pair_en.jpg)
+   - **Match pairs (drag and drop)**: Like in the learning mode, drag and drop to pair words or phrases with their correct translations.
+     ![Description](/flow/assets/match_pairs_training.gif)
 
-- **True or false**: Decide if the translation presented is correct.
-  ![Description](/flow/assets/training_true_false_en.jpg)
+   - **Flip cards**: Enter the correct translation for each word or phrase and press the check button. Be careful, as the case of letters matters.
+     ![Description](/flow/assets/training_flip_cards_en.jpg)
 
-- **Match pairs (drag and drop)**: Similar to learning mode, drag and drop to pair words or phrases with their correct translations.
-  ![Description](/flow/assets/match_pairs_training.gif)
+   **Note: If you answer incorrectly, the word or phrase is more likely to appear in future training sessions, helping you better memorize it.**
 
-- **Flip cards**: Enter the correct translation for each word or phrase and press the check button.
-  ![Description](/flow/assets/training_flip_cards_en.jpg)
+5. **View statistics**
+   After completing your training session, you can review your results on the Statistics page. For each training session, you can see your correct and incorrect answers, the date, the translation direction, and more.
+   ![Description](/flow/assets/statistics_en.jpg)
+   ![Description](/flow/assets/training_summary_en.jpg)
 
-## 5. View statistics
+6. **Home Page Sections**
+   On the home page, the following sections are available:
 
-After completing your training session, you can review your results on the Statistics page.
-![Description](/flow/assets/statistics_en.jpg)
-![Description](/flow/assets/training_summary_en.jpg)
+   - **Word of the Day**: A randomly selected word or phrase from your dictionary, with the option to hear the pronunciation of the word/phrase and its translation.
+     ![Description](/flow/assets/word_of_day_en.jpg)
 
-## 6. Home Page Sections
+   - **Upcoming calendar event**: Schedule a learning or training session for today or a future date, with the option to receive a reminder for this event.
+     ![Description](/flow/assets/calendar_event_en.jpg)
 
-On the home page, the following sections are available:
+   - **Recent achievements**: This section displays icons for achievements, such as completing a certain number of learning or training sessions, or mastering a number of words or phrases.
+     ![Description](/flow/assets/achievements_en.jpg)
 
-### Word of the Day
+   - **Latest training statistics**: Quickly view the results of your most recent training session.
+     ![Description](/flow/assets/latest_stats_en.jpg)
 
-A randomly selected word or phrase from your dictionary, with the option to hear the pronunciation.
-![Description](/flow/assets/word_of_day_en.jpg)
+7. **Account Settings**
 
-### Upcoming calendar event
-
-Schedule a learning or training session for today or a future date.
-![Description](/flow/assets/calendar_event_en.jpg)
-
-### Recent achievements
-
-Icons for achievements like completing learning or training sessions.
-![Description](/flow/assets/achievements_en.jpg)
-
-### Latest training statistics
-
-Quickly view the results of your most recent training session.
-![Description](/flow/assets/latest_stats_en.jpg)
-
-## 7. Account Settings
-
-Control the display of sections on the Home Page and access application settings.
-![Description](/flow/assets/account_en.jpg)
+   Control the display of sections on the Home Page and access other application settings, including adding or removing language pairs (Premium users only).
+   ![Description](/flow/assets/account_en.jpg)
