--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -15,6 +15,9 @@
 - Завантаживши excel документ зі списком слів/фраз
   ![Description](/flow/assets/import_excel_uk.jpg)
 
+  Перед завантаженням excel документа переконайтесь, що назви колонок мають такий вигляд:
+  ![Description](/flow/assets/excel_format.jpg)
+
 - Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
   ![Description](/flow/assets/send_from_app.jpg)
 
