--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -16,7 +16,7 @@
   ![Description](/flow/assets/import_excel_en.jpg)
 
   Before uploading the excel document, make sure that the names of the columns look like this:
-  ![Description](/flow/assets/excel_format.jpg)
+  ![Description](/flow/assets/excel_format.png)
 
 - By sharing a word or phrase from another app on your device and getting the translation
   ![Description](/flow/assets/send_from_app.jpg)
