--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -16,7 +16,7 @@
   ![Description](/flow/assets/import_excel_uk.jpg)
 
   Перед завантаженням excel документа переконайтесь, що назви колонок мають такий вигляд:
-  ![Description](/flow/assets/excel_format.jpg)
+  ![Description](/flow/assets/excel_format.png)
 
 - Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
   ![Description](/flow/assets/send_from_app.jpg)
