--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -18,6 +18,8 @@
   Before uploading the excel document, make sure that the names of the columns look like this:
   ![Description](/flow/assets/excel_format.png)
 
+  **Also, pay attention to the current translation direction and make sure that you download the Excel file specifically for it.**
+
 - By sharing a word or phrase from another app on your device and getting the translation
   ![Description](/flow/assets/send_from_app.jpg)
 
