--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -18,6 +18,8 @@
   Перед завантаженням excel документа переконайтесь, що назви колонок мають такий вигляд:
   ![Description](/flow/assets/excel_format.png)
 
+  **Також зверніть увагу на поточний напрямок перекладу і переконайтесь, що завантажуєте Excel файл саме для нього.**
+
 - Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
   ![Description](/flow/assets/send_from_app.jpg)
 
