--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -29,6 +29,10 @@
   When translating phrases or adding your own translation, these translations are marked with the word "Premium":
   ![Description](/flow/assets/custom_translate_en.jpg)
 
+  For many languages, the "Text to Speech" service is available, which is activated in the Dictionary by clicking on the icon:
+  ![Description](/flow/assets/tts.jpg)
+  We apologize if the Text to Speech service may not work for your language. If at least one language (native or the language you are learning) is supported, then the word or phrase will be voiced.
+
 **You can also delete a word/phrase in two ways:**
 
 - finger gesture to the left:
