--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -29,6 +29,10 @@
 При перекладі фраз або додаванні власного перекладу ці переклади помічені словом "Преміум":
 ![Description](/flow/assets/custom_translate_uk.jpg)
 
+Для багатьох мов доступний сервіс "Текст в мовлення", який в Словнику активується натисканням на іконку:
+![Description](/flow/assets/tts.jpg)
+Ми перепрошуємо, якщо для вашої мови сервіс "Текст в мовлення" може не працювати. У випадку якщо хоча б одна мова (рідна чи мова, яку вивчаєте) підтримується, то слово чи фраза будуть озвучені.
+
 **Також ви можете видалити слово/фразу двома способами:**
 
 - жестом пальця вліво:
