--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -20,7 +20,7 @@
 
   **Also, pay attention to the current translation direction and make sure that you download the Excel file specifically for it.**
 
-- By sharing a word or phrase from another app on your device and getting the translation
+- By sharing a word or phrase from another app on your device and getting the translation (Available to Premium users)
   ![Description](/flow/assets/send_from_app.jpg)
 
   To make it easier to choose the most correct translation, an indicator is available under the word, if it is completely filled in, then the translation is the most accurate:
