--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -20,7 +20,7 @@
 
   **Також зверніть увагу на поточний напрямок перекладу і переконайтесь, що завантажуєте Excel файл саме для нього.**
 
-- Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад
+- Поширивши слово/фразу з іншого додатка на вашому пристрої та отримавши переклад (**Доступно для Преміум користувачів**)
   ![Description](/flow/assets/send_from_app.jpg)
 
 Для полегшення вибору найбільш корректного перекладу вам доступний індикатор під словом, якщо він повністю заповнений, то переклад найбільш точний:
